# crowdfund

./: Cargo.toml  README.md  d
node/src/: chain_spec.rs
pallets/account/: Cargo.toml
pallets/account/src/: lib.rs  mock.rs  tests.rs
pallets/fund-raising/: Cargo.toml
pallets/fund-raising/src/: lib.rs  mock.rs  tests.rs
pallets/rating/: Cargo.toml
pallets/rating/src/: lib.rs  mock.rs
pallets/template/src/: lib.rs
pallets/vote/: Cargo.toml
pallets/vote/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
